# WaitForEvent

./: CMakeLists.txt  README.md
wait_for_event/: CMakeLists.txt  wait_for_event.hxx
wait_for_event_example/: CMakeLists.txt  main.cxx
